# search distance filter badge background colour fixed # card background color and shadow removed # notification position fixed and bottom color added for visibility # logo background clipped path for modern looks and asthethics

--- a/src/css/layouts-style/header.styl
+++ b/src/css/layouts-style/header.styl
@@ -7,6 +7,8 @@
       width: 40px;
       height: 40px;
       background: #fafafa;
+      -webkit-clip-path: polygon(50% 0%, 100% 20%, 100% 75%, 50% 100%, 2% 70%, 2% 20%);
+      // clip-path: polygon(50% 0%, 100% 25%, 100% 75%, 50% 100%, 0% 75%, 0% 25%);
     }
 }
 .icon-notification {
